Bug 425704 - Icon themes are not marked as installed in "Get new icons" window
Summary: Icon themes are not marked as installed in "Get new icons" window
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Jeremy Whiting
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-23 10:42 UTC by Patrick Silva
Modified: 2020-08-25 08:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-08-23 10:42:52 UTC
STEPS TO REPRODUCE
1. open system settings > icons > get new icons
2. install some icon themes. I installed these ones...
newaita
candy icons
qogir
mcmojave-circle
flatery
3. leave Icons kcm
4. reopen icons > get new icons
5. set "Show" dropdown to "Installed only"

OBSERVED RESULT
icon themes installed in the step 2 are not listed

EXPECTED RESULT
all icon themes installed via GHNS window should be marked as installed

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Comment 1 Alexander Lohnau 2020-08-25 04:38:56 UTC
Appears to be an issue with the recently RemoveDeadEntries option which is set to true.

Will write a patch for this :)
Comment 2 Bug Janitor Service 2020-08-25 04:49:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/40
Comment 3 Alexander Lohnau 2020-08-25 08:29:28 UTC
Git commit 4fa06ab4c2bf67602b28090fd661f61fc4f51e3a by Alexander Lohnau.
Committed on 25/08/2020 at 05:11.
Pushed by alex into branch 'master'.

Handle /* notation for RemoveDeadEntries
FIXED-IN: 5.20

M  +7    -1    src/core/cache.cpp

https://invent.kde.org/frameworks/knewstuff/commit/4fa06ab4c2bf67602b28090fd661f61fc4f51e3a