Handle /* notation for RemoveDeadEntries

BUG: 425704
FIXED-IN: 5.20